...
    func show(quiz result: QuizResultsViewModel) {
        //TODO: - call alertPresenter
        let alertModel = AlertModel(
            title: result.title,
            message: result.text,
            buttonText: result.buttonText,
            identifier: "Game results",
            completion: { [weak self] in
                guard let self else {return}
                self.presenter?.restartGame()
            }
        )
        alertPresenter?.show(alertModel: alertModel)
...
